# projetPOO

./: .gitignore  README.md  pyproject.toml
docs/: 20'000 lieux sous les mers.txt
src/projetpoo/: __init__.py  importateur.py  lecteurtexte.py  texte.py
tests/: .pylintrc  20'000 lieux sous les mers_doctest.txt  test_example.py
