[project]


name = "projetpoo"
version = "0.1.0"
description = "A short description"
authors = [
    { name = "Your Name", email = "your@email.com" },
]
readme = "README.md"
requires-python = ">=3.13"
license = "None"



[dependency-groups]
dev = [
    "mypy>=1.13",
 "pylint>=4.0.5",
 "pytest>=8.0",
 "ruff>=0.8",
]


[tool.ruff]
target-version = "py313"
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "ANN",
    "S603",
    "COM812",
    "ISC001",
    "T201",
    "S607",
    "TRY003",
    "S101",
    "S606",
    "FBT001",
]

[tool.ruff.lint.per-file-ignores]
"**/test/*" = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN003",
    "ANN201",
    "ANN202",
    "ARG001",
    "ARG002",
    "BLE001",
    "D",
    "E402",
    "E501",
    "F401",
    "F841",
    "INP001",
    "N801",
    "PGH003",
    "PLC0415",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PT011",
    "S101",
    "S101",
    "S106",
    "S110",
    "S112",
    "S603",
    "S607",
    "S607",
    "SLF001",
    "T201",
    "TC002",
    "TC003",
]


[tool.ruff.format]
docstring-code-format = true


# in vscode also add python.extra.path: src
[tool.pylint.main]
source-roots = ["src", "tests"]
ignore-paths = '^.venv/.*$'
recursive = true

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]